Fixed navbar on mobile

--- a/www/style.css
+++ b/www/style.css
@@ -69,7 +69,6 @@ p {
 }
 div.d-navbar {
   width: 100%;
-  height: 48px;
   box-shadow: 0 5px 5px 0 rgb(0 0 0 / 3%), 0 5px 5px 0 rgb(0 0 0 / 3%);
   margin-bottom: 18px;
   border-bottom: 1px solid #dcdcdc;
